tests/frontend/pass/storageread0.act
contract Pass

constructor
interface constructor()

creates

	uint x := 0
	uint y := 2

transition f
interface f()

storage

	x := y
    y
