tests/frontend/fail/untimed_entry.act
contract Fail

constructor
interface constructor(uint y)

creates

  uint x := y

ensures

  x >= y
